package ucf.assignments;

import javafx.event.ActionEvent;

public class EditController {
    public void ButtonBackMMClicked(ActionEvent event){
        // calls returnMain class's associated method to return to main menu
        // consistent as it goes back one submenu
    }
    public void ButtonListClicked(ActionEvent event){
        // make a new parent using the EditList fxml file
        // make a new scene using this parent
        // make and set a new Stage by getting the Source, Scene, and Window of the event
        // set scene of new Stage with our new scene
        //  display the window
    }
    public void ButtonItemClicked(ActionEvent event){
        // make a new parent using the EditItem fxml file
        // make a new scene using this parent
        // make and set a new Stage by getting the Source, Scene, and Window of the event
        // set scene of new Stage with our new scene
        //  display the window
    }
}
