package ucf.assignments;

public class Items {
    // Has Due Date and Description as String variables
    // Has "Complete" as a boolean variable initially set to false
    // Setters and getters for those
}
