package ucf.assignments;

import javafx.collections.FXCollections;
import javafx.collections.ObservableList;

import java.io.File;
import java.util.ArrayList;
import java.util.List;

public class ToDoListAll {
    // create an arraylist of ToDoLists, and then make an observable list of ToDoLists
    // Use FXCollections.observableList and have our ArrayList as the parameters
    public void addToDoList(ToDoList new_tdl){
        // use add method for ArrayLists
    }
    public void editToDoList(String user_input, String old_list){
        // Call the setter with user_input
        // Change the name of the list
    }
    public void removeToDoList(String name_to_remove){
         // call in a for loop the method to remove an Item from a dolist
        // This will remove all the items in that list, then remove the list using
        // ArrayList functions
    }
    public void displayLists(ToDoList select_tdl,boolean complete, boolean incomplete){
        // based on complete, incomplete
        // Will display the Items of a ToDoList using a For Loop
        // Realistically, each Item should have a "title" but not in requirements
    }
    public void SaveLists(ToDoListAll User_Save){ // Saves All Lists
        // use a Filechooser and get the stage of the current window
        // implement the name of the window, the file extension( .txt)
        // Call a method that writes to the file specified in the specific format
        // MethodName(File filename, ToDoListAll User_Save)
    }
    public void LoadLists(){
        // works similar to SaveLists
        // use the stage of the current window in a FileChooser
        // call a FileChooser method that "saves" the directory
        // calls a method that reads the File until the end of the File
        // The File will have the format as a save file, so no need to worry
    }
    public boolean writeFileAll(File filename, ToDoListAll User_Save){
        // write to the file
        // Format------------
        // ListName1 Item1DD Item1Desc Item2DD Item2Desc...
        // After each "thing" is printed, have newline char
        return true;
    }
    public boolean readFileAll(){
        // gets the File name from writeFileAll and the Empty List of ToDoLists
        // reads until end of file, inserting the items and their properties when prompted
        return true;
    }
}

