package ucf.assignments;

import javafx.application.Application;
import javafx.fxml.FXMLLoader;
import javafx.scene.Parent;
import javafx.scene.Scene;
import javafx.stage.Stage;

import java.io.IOException;

public class ToDoListMainMenu extends Application { // This functions as our 'main' class
    public static void main(String[] args) {
        //launch(args);
    }
     public void start(Stage primaryStage){
         /*try{
             Parent root = FXMLLoader.load(getClass().getResource("ToDoListMainMenu.FXML"));
             Scene scene = new Scene(root);
             primaryStage.setScene(scene);
             primaryStage.setTitle("To-do List Manager");
             primaryStage.show();
         }
         catch(IOException e){
             e.printStackTrace();
         }*/
    // Set the parent using the associated FXML file
    // Make a new scene using the parent as the template window
    // Set the scene to the stage
    // Set the title of the stage
    // show the stage/window
    // The above is an example of what looks like. the Format is used plenty of times
    }
}
