package ucf.assignments;

import java.awt.event.ActionEvent;

public class ToDoListMainMenuController {
    public void ButtonAddClicked(javafx.event.ActionEvent event){
        // make a new parent using the Add fxml file
        // make a new scene using this parent
        // make and set a new Stage by getting the Source, Scene, and Window of the event
        // set scene of new Stage with our new scene
        //  display the window
    }
    public void ButtonRemoveClicked(javafx.event.ActionEvent event){
        // make a new parent using the Remove fxml file
        // make a new scene using this parent
        // make and set a new Stage by getting the Source, Scene, and Window of the event
        // set scene of new Stage with our new scene
        //  display the window
    }
    public void ButtonEditClicked(javafx.event.ActionEvent event){
        // make a new parent using the Edit fxml file
        // make a new scene using this parent
        // make and set a new Stage by getting the Source, Scene, and Window of the event
        // set scene of new Stage with our new scene
        //  display the window
    }
    public void ButtonDisplayClicked(javafx.event.ActionEvent event){
        // make a new parent using the Display fxml file
        // make a new scene using this parent
        // make and set a new Stage by getting the Source, Scene, and Window of the event
        // set scene of new Stage with our new scene
        //  display the window
    }
    public void ButtonSaveLoadClicked(javafx.event.ActionEvent event){
        // make a new parent using the SaveLoad fxml file
        // make a new scene using this parent
        // make and set a new Stage by getting the Source, Scene, and Window of the event
        // set scene of new Stage with our new scene
        //  display the window
    }
    public void ButtonExitClicked(javafx.event.ActionEvent event){
        // Exit the Stage/Window
    }
}


