package ucf.assignments;

import java.awt.event.ActionEvent;

public class addController {
    public void ButtonBackMMClicked(javafx.event.ActionEvent event){
        // call the returnToMainMenu method from the associated class
        // returnMain.returnToMainMenu(event); as an example
        // It goes back one submenu, so its consistent
    }
    public void ButtonListClicked(javafx.event.ActionEvent event){
        // make a new parent using the makeList fxml file
        // make a new scene using this parent
        // make and set a new Stage by getting the Source, Scene, and Window of the event
        // set scene of new Stage with our new scene
        //  display the window
    }
    public void ButtonItemClicked(javafx.event.ActionEvent event){
        // make a new parent using the makeItem fxml file
        // make a new scene using this parent
        // make and set a new Stage by getting the Source, Scene, and Window of the event
        // set scene of new Stage with our new scene
        //  display the window
    }
}
