package ucf.assignments;

import javafx.event.ActionEvent;

public class removeController {
    public void  ButtonBackMMClicked(ActionEvent event){
        // calls the returnMenu class to return to main menu
        // one submenu back, so consistent
    }
    public void ButtonListClicked(ActionEvent event){
        // make a new parent using the removeList fxml file
        // make a new scene using this parent
        // make and set a new Stage by getting the Source, Scene, and Window of the event
        // set scene of new Stage with our new scene
        //  display the window
    }
    public void ButtonItemClicked(ActionEvent event){
        // make a new parent using the removeItem fxml file
        // make a new scene using this parent
        // make and set a new Stage by getting the Source, Scene, and Window of the event
        // set scene of new Stage with our new scene
        //  display the window
    }
}
