package ucf.assignments;

import javafx.event.ActionEvent;
import javafx.fxml.FXML;
import javafx.scene.control.ListView;

public class removeListController {
    @FXML private ListView AvailableLists;
    public void ButtonBackRemoveClicked(ActionEvent event){
        // returns to the previous menu
    }
    //String fillListText
    public void ButtonConfirmClicked(ActionEvent event){
        // have a pop-up window show up notifying the user that deleting a List deletes all items
        // On the list.
    }
    public void ButtonReturnClicked(ActionEvent event){
        // returns to the main menu
    }
}
