package ucf.assignments;

import javafx.event.ActionEvent;

public class removeListPopUpController {
    //The user is asked if they wish to continue. They click "Yes" or "No"
    public void ButtonYesClicked(ActionEvent event){
        // call a method to remove all items of the selected list in a for loop
        // remove the List
        // close the pop-up window
    }
    public void ButtonNoClicked(ActionEvent event){
        // close the pop-up window
    }
}
