package ucf.assignments;

import javafx.event.ActionEvent;

public class returnMain {
    public static void returnToMainMenu(ActionEvent event){ // Same regardless of event so static
        // Used a shit-ton.
        // make a new parent using the ToDoListMainMenuController fxml file
        // make a new scene using this parent
        // make and set a new Stage by getting the Source, Scene, and Window of the event
        // set scene of new Stage with our new scene
        //  display the window
    }
}
