@startuml
'https://plantuml.com/class-diagram

class ToDoListMainMenu

ToDoListMainMenu -- ToDoListMainMenuController

class ToDoListMainMenuController{
ButtonAddClicked(ActionEvent event)
ButtonRemoveClicked(ActionEvent event)
ButtonEditClicked(ActionEvent event)
ButtonDisplayClicked(ActionEvent event)
ButtonSaveLoadClicked(ActionEvent event)
ButtonExitClicked(ActionEvent event)
}
ToDoListMainMenuController -- addController
ToDoListMainMenuController -- removeController
ToDoListMainMenuController -- EditController
ToDoListMainMenuController -- displayController
ToDoListMainMenuController -- SaveLoadController
' Add submenu

class addController{
ButtonBackMMClicked(ActionEvent event)
ButtonListClicked(ActionEvent event)
ButtonItemClicked(ActionEvent event)
}

class addListController implements Initializable{
ButtonBackAddClicked(ActionEvent event)
TextField NameNewList
ButtonOKClicked(ActionEvent event)
ButtonReturnClicked(ActionEvent event)
initialize(URL location, ResourceBundle resources)
}

class addItemController implements Initializable{
ListView chooseListAdd
TextField chooseItemAdd
ButtonBackClicked(ActionEvent event)
ButtonConfirmClicked(ActionEvent event)
ButtonFinishClicked(ActionEvent event)
initialize(URL location, ResourceBundle resources)
}

addController -- addListController
addController -- addItemController

' Remove submenu

class removeController{
ButtonBackMMClicked(ActionEvent event)
ButtonListClicked(ActionEvent event)
ButtonItemClicked(ActionEvent event)
}

class removeListController{
ListView AvailableLists
ButtonBackRemoveClicked(ActionEvent event)
ButtonConfirmClicked(ActionEvent event)
ButtonReturnClicked(ActionEvent event)
}

class removeListPopUpController{
    ButtonYesClicked(ActionEvent event)
    ButtonNoClicked(ActionEvent event)
}

class removeItemController implements Initializable{
ListView ListToRemove
ListView ItemToRemove
ButtonBackClicked(ActionEvent event)
ButtonConfirmClicked(ActionEvent event)
ButtonReturnClicked(ActionEvent event)
initialize(URL location, ResourceBundle resources)
}

removeController -- removeListController
removeController -- removeItemController
removeListController -- removeListPopUpController

' Edit submenu

class EditController{
ButtonBackMMClicked(ActionEvent event)
ButtonListClicked(ActionEvent event)
ButtonItemClicked(ActionEvent event)
}

class EditListController implements Initializable{
TextField newListName
ListView ListToEdit
ButtonBackEditClicked(ActionEvent event)
ButtonConfirmClicked(ActionEvent event)
ButtonReturnClicked(ActionEvent event)
initialize(URL location, ResourceBundle resources)
}

class EditItemController implements Initializable{
TextField UserEdit
ChoiceBox ItemEdit
ButtonBackEditClicked(ActionEvent event)
ButtonConfirmClicked(ActionEvent event)
ButtonReturnClicked(ActionEvent event)
initialize(URL location, ResourceBundle resources)
}

EditController -- EditListController
EditController -- EditItemController

' display submenu - maybe more to add here?

class displayController implements Initializable{
TextField chooseListName
ChoiceBox Complete
ChoiceBox Incomplete
ButtonBackClicked(ActionEvent event)
ButtonConfirmClicked(ActionEvent event)
initialize(URL Location, ResourceBundle rb)
}

' Save/Load submenu


class SaveLoadController{
ButtonBackMMClicked(ActionEvent event)
ButtonSaveClicked(ActionEvent event)
ButtonLoadClicked(ActionEvent event)
}

class SaveExternalListController{
backButtonClicked(ActionEvent event)
ButtonReturnClicked(ActionEvent event)
ButtonOKClicked(ActionEvent event)
ListView AvailableLists
}

class LoadExternalListController{
backButtonClicked(ActionEvent event)
ButtonReturnClicked(ActionEvent event)
ButtonOKClicked(ActionEvent event)
ListView AvailableLists
}

SaveLoadController -- SaveController
SaveLoadController -- LoadController
SaveController -- SaveExternalListController
LoadController -- LoadExternalListController

class returnMain{
ReturnToMainMenu(ActionEvent event)
}

' No need for exit submenu, exit button will leave the program

class ToDoListAll{
public void addToDoList(ToDoList new_tdl)
public void editToDoList(String user_input, String old_list)
public void removeToDoList(String name_to_remove)
public void displayLists(ToDoList select_tdl,boolean complete, boolean incomplete)
public void SaveLists(ToDoListAll User_Save)
public void LoadLists()
public boolean writeFileAll(File filename, ToDoListAll User_Save)
public boolean readFileAll()
ArrayList<ToDoLists>
}
class ToDoList{
public void addItem(Items Item_to_add)
public void editItem(Items Item_to_edit, String DueDate, String Description)
public void removeItem(String item_name)
public void markItem(Items user_item,boolean complete)
public void SaveList(ToDoList User_Save)
public void LoadList()
public boolean writeFile(File filename, ToDoList User_Save)
public boolean readFile(File filename, ToDoList User_Load)
ArrayList<Items>
}

class Items{
String description, DueDate
boolean complete
}

@enduml